--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,7 @@
 
 :root {
   --primary-color: #ed3849;
+  --primary-blue: #B9D9EB;
   --primary-color-dark: #d23141;
   --primary-color-light: #f4e5ec;
   --text-dark: #0f172a;
@@ -49,6 +50,7 @@
   font-size: 1rem;
   color: var(--white);
   background-color: var(--primary-color);
+  /* background-color: var(--primary-blue); */
   border-radius: 5px;
   cursor: pointer;
   transition: 0.3s;
@@ -126,8 +128,9 @@ nav {
 }
 
 .header__container {
-  min-height: 650px;
-  background-color: var(--primary-color-light);
+  min-height: 500px;
+  /* background-color: var(--primary-color-light); */
+  background-color: var(--primary-blue);
   border-bottom-left-radius: 1rem;
   border-bottom-right-radius: 1rem;
   display: grid;
@@ -216,7 +219,14 @@ nav {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-15%, -50%);
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.2);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .hero__content p {
@@ -284,7 +294,8 @@ nav {
 }
 
 .deals__container {
-  background-color: var(--primary-color-light);
+  /* background-color: var(--primary-color-light); */
+  background-color: var(--primary-blue);
   border-radius: 1rem;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
